<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.wokonik.kenneth.gouvg.SignUpActivity"
        android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">


        <ImageView android:src="@drawable/gouvggreen"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/carnetText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/carnet"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/User"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout2"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass_input_layout3"
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/btnSignUp"
            android:textColor="#fff"/>

    </LinearLayout>

</RelativeLayout>
</ScrollView>